--- a/package.json
+++ b/package.json
@@ -3,17 +3,25 @@
   "private": true,
   "version": "0.0.0",
   "type": "module",
+  "homepage": "https://abrajam83.github.io/ahm-portafolio",
   "scripts": {
     "dev": "vite",
     "build": "vite build",
     "lint": "eslint .",
-    "preview": "vite preview"
+    "preview": "vite preview",
+     "predeploy": "npm run build",
+  "deploy": "gh-pages -d dist"
   },
   "dependencies": {
-    "framer-motion": "^11.11.17",
+    "@tailwindcss/aspect-ratio": "^0.4.2",
+    "chart.js": "^4.4.7",
+    "chartjs-plugin-datalabels": "^2.2.0",
+    "d3": "^7.9.0",
+    "framer-motion": "^11.16.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "react-router-dom": "^7.0.1"
+    "react-router-dom": "^7.0.1",
+    "wordcloud": "^1.2.3"
   },
   "devDependencies": {
     "@eslint/js": "^9.13.0",
@@ -25,9 +33,10 @@
     "eslint-plugin-react": "^7.37.2",
     "eslint-plugin-react-hooks": "^5.0.0",
     "eslint-plugin-react-refresh": "^0.4.14",
+    "gh-pages": "^6.3.0",
     "globals": "^15.11.0",
     "postcss": "^8.4.49",
-    "tailwindcss": "^3.4.15",
+    "tailwindcss": "^3.4.17",
     "vite": "^5.4.10"
   }
 }
